[gd_scene load_steps=11 format=2]

[ext_resource path="res://enemigos/bombardero/bombardero_3.png" type="Texture" id=1]
[ext_resource path="res://enemigos/bombardero/bombardero_2.png" type="Texture" id=2]
[ext_resource path="res://enemigos/bombardero/bombardero.png" type="Texture" id=3]
[ext_resource path="res://enemigos/bombardero/bombardero_1.png" type="Texture" id=4]
[ext_resource path="res://enemigos/bombardero/bombardero.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "drop",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 4.0
} ]

[sub_resource type="Animation" id=4]
length = 0.001

[sub_resource type="Animation" id=5]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 147.0 ]
}

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 14.0357

[node name="bombardero" type="Node2D"]
script = ExtResource( 5 )

[node name="bombardero" type="KinematicBody2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="bombardero"]
frames = SubResource( 1 )
animation = "fly"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="bombardero/AnimatedSprite"]
autoplay = "RESET"
anims/RESET = SubResource( 4 )
anims/die = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bombardero"]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="bombardero"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bombardero/Area2D"]
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[connection signal="body_entered" from="bombardero/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
